app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        version: v1
        maistra.io/expose-route: "true"
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: 
          imagePullPolicy: Always
          name: webapp
          ports:
            - containerPort: 8080
              protocol: TCP
